Installed tailwind and impoorted new fonts.
Created basic navbar.
Started hero.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*", "./components/*", "./lib/*"]
+      "@/components/*": ["src/components/*"],
+      "@/lib/*": ["src/lib/*"]
     }
-  },
-  "include": [
-    "src",
-    "components",
-    "lib"
-  ]
+  }
 }
